@@ -1,3 +1,15 @@
+2021-11-18  Per Arne Vollan  <pvollan@apple.com>
+
+        [macOS] Block access to unused resources in the Networking process' sandbox
+        https://bugs.webkit.org/show_bug.cgi?id=233086
+        <rdar://problem/85376544>
+
+        Reviewed by Brent Fulgham.
+
+        Based on telemetry, block access to unused resources in the Networking process' sandbox on macOS.
+
+        * NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in:
+
 2021-10-25  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK][a11y] Add initial WTR accessibility support when building with ATSPI
